m/k/k3d-dfd-cilium/resource-ingress-hubble-ui.yaml
#ManagedBy: cue

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hubble.dev.amanihavam.defn.run
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: hubble.dev.amanihavam.defn.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
